[gd_scene load_steps=2 format=3 uid="uid://chyc6mjjmyek7"]

[ext_resource type="Script" path="res://ui/context/project_view_context_menu.gd" id="1_hrih3"]

[node name="ProjectViewContextMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_hrih3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="DiffButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Diff"

[node name="EvalButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Eval"

[node name="TwopointSaveAsButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Save As (Twopoint)"

[node name="FourpointSaveAsButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Save As (Fourpoint)"

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Close"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DiffButton" to="." method="_on_diff_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/EvalButton" to="." method="_on_eval_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TwopointSaveAsButton" to="." method="_on_twopoint_save_as_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/FourpointSaveAsButton" to="." method="_on_fourpoint_save_as_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
